Fix initial caret position and Add custom scrollbar to Editor

--- a/src/components/Playground/Playground.module.css
+++ b/src/components/Playground/Playground.module.css
@@ -100,4 +100,5 @@
   line-height: 20px;
   padding: 6px;
   border-radius: 5px;
+  height: 600px;
 }
